Added questions and categories

--- a/site/invite/index.html
+++ b/site/invite/index.html
@@ -35,7 +35,7 @@
     />
     <meta name="theme-color" content="#ffffff" />
 
-    <title>CompClub 2019 Summer CTF</title>
+    <title>Kingsway CTF 2019</title>
     <meta
       name="viewport"
       content="width=device-width,initial-scale=1,maximum-scale=1,minimum-scale=1"
@@ -221,7 +221,7 @@
       <div class="content">
         <img
           class="logo-compclub"
-          src="/assets/img/compclub.logo.white.svg"
+          src="/assets/img/kingswaylogo.png"
           style="margin-top: -10vh"
         />
         <!-- <img/> LOGO -->
