--- a/site/template.html
+++ b/site/template.html
@@ -34,7 +34,7 @@
     />
     <meta name="theme-color" content="#ffffff" />
 
-    <title>CompClub 2019 Summer CTF</title>
+    <title>Kingsway CTF</title>
     <link rel="stylesheet" href="/assets/css/normalize.min.css" />
     <link rel="stylesheet" href="/assets/css/bulma.min.css" />
     <link rel="stylesheet" href="/assets/font/hack-subset.css" />
@@ -80,11 +80,12 @@
 
     <nav class="navbar is-fixed-bottom is-dark">
       <div class="navbar-brand">
-        <a class="navbar-item" href="//summer2019.compclub.com.au">
+        <a class="navbar-item">
           <img
-            src="/assets/img/compclub.logo.white.svg"
-            width="112"
-            height="28"
+            src="/assets/img/kingswaylogo.png"
+            title="FLAG{swiper_no_swiping}"
+            width="120"
+            height="130"
           />
         </a>
       </div>
