--- a/site/invite/index.html
+++ b/site/invite/index.html
@@ -219,11 +219,11 @@
   <body>
     <div class="container is-vertical-center b-wrap has-text-centered">
       <div class="content">
-        <img
+        <!-- <img
           class="logo-compclub"
           src="/assets/img/kingswaylogo.png"
           style="margin-top: -10vh"
-        />
+        /> -->
         <!-- <img/> LOGO -->
         <section class="section" name="invite">
           <h1 class="is-size-3 has-text-light">
@@ -248,11 +248,11 @@
         <section class="section hide" name="auth-type">
           <h1 class="is-size-3 has-text-light">Are you new here?</h1>
           <div class="field is-grouped is-grouped-centered">
-            <p class="control">
-              <a class="button is-warning is-outlined is-large" name="register">
+            <!-- <p class="control">
+               <a class="button is-warning is-outlined is-large" name="register">
                 REGISTER
-              </a>
-            </p>
+              </a> 
+            </p> -->
             <p class="control">
               <a class="button is-warning is-outlined is-large" name="login">
                 LOGIN
@@ -339,7 +339,7 @@
               />
             </div>
           </form>
-        </section>
+        </section> 
       </div>
     </div>
 
