--- a/site/template.html
+++ b/site/template.html
@@ -81,12 +81,14 @@
     <nav class="navbar is-fixed-bottom is-dark">
       <div class="navbar-brand">
         <a class="navbar-item">
+          <a href="/invite">
           <img
             src="/assets/img/kingswaylogo.png"
             title="FLAG{swiper_no_swiping}"
             width="120"
-            height="130"
+            height="80"
           />
+        </a>
         </a>
       </div>
       <div class="navbar-menu">
