--- a/site/template.html
+++ b/site/template.html
@@ -82,12 +82,11 @@
       <div class="navbar-brand">
         <a class="navbar-item">
           <a href="/invite">
-          <img
+          <!-- <img
             src="/assets/img/kingswaylogo.png"
-            title="FLAG{swiper_no_swiping}"
             width="120"
-            height="80"
-          />
+            height="50"
+          /> -->
         </a>
         </a>
       </div>
