--- a/site/invite/index.html
+++ b/site/invite/index.html
@@ -248,11 +248,11 @@
         <section class="section hide" name="auth-type">
           <h1 class="is-size-3 has-text-light">Are you new here?</h1>
           <div class="field is-grouped is-grouped-centered">
-            <!-- <p class="control">
+            <p class="control">
                <a class="button is-warning is-outlined is-large" name="register">
                 REGISTER
               </a> 
-            </p> -->
+            </p>
             <p class="control">
               <a class="button is-warning is-outlined is-large" name="login">
                 LOGIN
